<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_walkthrough"
    tools:context="com.harpreet.moviereviews.LoginActivity" >

    <Button
        android:id="@+id/not_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Not Registed ?"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/eduser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Username"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/edpass"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Enter Password"
        android:textColor="@android:color/white"
        android:layout_marginBottom="77dp"
        android:layout_alignBottom="@+id/login"
        android:layout_alignLeft="@+id/eduser"
        android:layout_alignStart="@+id/eduser"
        android:textColorHint="@android:color/white" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/not_reg"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app2:srcCompat="@drawable/ic_user"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

</RelativeLayout>
