<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app=""
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_walkthrough"
    tools:context=".RegisterActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    </RelativeLayout>

    <Button
        android:id="@+id/btnsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="18dp"
        style="@style/Widget.AppCompat.Button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app2:srcCompat="@drawable/registration"
        android:id="@+id/imageView3"
        android:layout_alignRight="@+id/btnsave"
        android:layout_alignEnd="@+id/btnsave" />

    <EditText
        android:id="@+id/editemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Username"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_below="@+id/editemail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Enter Password"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_below="@+id/editusername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editconformpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Confirm Password"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_below="@+id/editpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editlastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Last name"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_above="@+id/editemail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editfirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="First name"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_above="@+id/editlastname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <requestFocus />
    </EditText>

</RelativeLayout>
