<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="action_settings" type="id" />
    <item name="not_reg" type="id" />
</resources>